prevent result count display from shifting filter elements

--- a/src/assets/styles/filters.css
+++ b/src/assets/styles/filters.css
@@ -41,6 +41,7 @@
   text-align: left;
   font-size: 0.8em;
   display: inline-block;
+  width: 250px;
 }
 
 .results-count span {
